# SDL-astar

./: A_star  CMakeLists.txt  README.md  a_star.c  a_star.h  grid.c  grid.h  main.c  makefile  saved_grid.txt
src/: a_star.c  a_star.h  grid.c  grid.h  heap.c  heap.h  linked_list.c  linked_list.h
